NetBSD Problem Report #45622

From www@NetBSD.org  Thu Nov 17 13:02:38 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1829663D8AD
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 17 Nov 2011 13:02:38 +0000 (UTC)
Message-Id: <20111117130233.93E3D63D876@www.NetBSD.org>
Date: Thu, 17 Nov 2011 13:02:33 +0000 (UTC)
From: isaki@pastel-flower.jp
Reply-To: isaki@pastel-flower.jp
To: gnats-bugs@NetBSD.org
Subject: i386 kernel panics at pic16lc_attach.
X-Send-Pr-Version: www-1.0

>Number:         45622
>Category:       kern
>Synopsis:       i386 kernel panics at pic16lc_attach.
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 17 13:05:00 +0000 2011
>Closed-Date:    Sun Nov 20 04:22:08 +0000 2011
>Last-Modified:  Sun Nov 20 04:22:08 +0000 2011
>Originator:     Tetsuya Isaki
>Release:        NetBSD 5.1/i386
>Organization:
>Environment:
NetBSD XXX.jp 5.1 NetBSD 5.1 (XXX) #8: Wed Nov 16 15:17:39 JST 2011  root@XXX.jp:/usr/src/sys/arch/i386/compile/XXX i386

>Description:
pic16lc* at iic? panics during device attach (on non-XBOX i386
machines?).
# yeah, I've written 'pic16lc* at iic?' on my kernel config
# for non-XBOX machine by mistake :)

I only tested it on 5.1, but current source code seems to
have the same problem, I think.
>How-To-Repeat:
add "pic16lc* at iic?" in your kernel config.
>Fix:
I'm not sure but how about it?

--- sys/dev/i2c/pic16lc.c.ORG   2008-06-08 12:56:09.000000000 +0900
+++ sys/dev/i2c/pic16lc.c   2011-11-16 15:22:48.000000000 +0900
@@ -56,6 +56,10 @@
 void       pic16lc_poweroff(void);
 void       pic16lc_setled(uint8_t);

+#define XBOX_SENSOR_CPU        0
+#define XBOX_SENSOR_BOARD  1
+#define XBOX_NSENSORS      2
+
 struct pic16lc_softc {
    device_t    sc_dev;

@@ -63,16 +67,12 @@
    i2c_addr_t  sc_addr;
    void *      sc_ih;

-   envsys_data_t sc_sensor[1];
+   envsys_data_t sc_sensor[XBOX_NSENSORS];
    struct sysmon_envsys *sc_sme;
 };

 static struct pic16lc_softc *pic16lc = NULL;

-#define XBOX_SENSOR_CPU        0
-#define XBOX_SENSOR_BOARD  1
-#define XBOX_NSENSORS      2
-
 static void    pic16lc_update(struct pic16lc_softc *, envsys_data_t *);
 static void    pic16lc_refresh(struct sysmon_envsys *, envsys_data_t *);

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45622 CVS commit: src/sys/dev/i2c
Date: Thu, 17 Nov 2011 13:47:27 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Thu Nov 17 13:47:27 UTC 2011

 Modified Files:
 	src/sys/dev/i2c: pic16lc.c

 Log Message:
 Fix last envsys2 conversion (1.10).  From Tetsuya Isaki in PR#45622.


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/sys/dev/i2c/pic16lc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Sun, 20 Nov 2011 04:22:08 +0000
State-Changed-Why:
fixed.  (followed shortly thereafter by removal of Xbox support)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.