Fix last envsys2 conversion (1.10).  From Tetsuya Isaki in PR#45622.